<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/sfnsdisplay"
            android:text="@string/app_name"
            android:textColor="#171717"
            android:textSize="32.6sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/maven_pro_medium"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#00000000"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                android:background="#b9b9b9" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#00000000"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="#b9b9b9" />

        <TextView
            android:id="@+id/userLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rect_account_btn"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/forgotten_your_password"
            android:textColor="#9e9e9e"
            android:textSize="15.4sp" />

    </LinearLayout>

    <include
        android:visibility="gone"
        android:id="@+id/llProgressBar"
        layout="@layout/please_wait" />
    <TextView
        android:id="@+id/loginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/swipe_right"
        android:textSize="20sp" />
</RelativeLayout>



